# ditana-config

./: .gitignore  .pre-commit-config.yaml  README.md  ditana-schema.json  installation-steps.kdl  validate-logic.py
.github/workflows/: release-develop.yml  release.yml
folders/etc/environment.d/: 50-ditana-disable-dmabuf-for-webkit.conf  50-ditana-set-theme.conf  50-ditana-xdg.conf  50-ditana-xkb.conf  90-ditana-ramdisk.conf
folders/etc/fonts/: local.conf
folders/etc/greetd/: config.toml
folders/etc/modprobe.d/: ditana-zfs.conf
folders/etc/profile.d/: ditana-disable-dmabuf-for-webkit.sh  ditana-java.sh  ditana-ramdisk.sh  ditana-system-paths.sh  ditana-xdg.sh
folders/etc/skel/: .bashrc_ditana  .shellrc  .zshrc
folders/etc/sudoers.d/: pwfeedback
folders/etc/systemd/: zram-generator.conf
json-kdl-converter/: Cargo.toml
json-kdl-converter/src/: main.rs
settings/: base-packages.kdl  hardware-detection.kdl  installer-state.kdl
settings/dialogs/: ai-tools.kdl  browser.kdl  desktop-appearance.kdl  desktop-applications.kdl  desktop-environment.kdl  desktop-theme.kdl  multimedia.kdl  office.kdl  user-profile.kdl
settings/dialogs/advanced/: boot-init.kdl  development-tools.kdl  file-manager.kdl  filesystem.kdl  hardware-support.kdl  kernel-selection.kdl  network-security.kdl  package-management.kdl  power-management.kdl  storage-options.kdl  sudo-configuration.kdl  sudo-timeout.kdl  system-maintenance.kdl  terminal-emulator.kdl  terminal-tools.kdl
settings/dialogs/desktop-environment/: cosmic+x11.kdl  cosmic.kdl  niri.kdl  wayfire.kdl  wayland+x11.kdl  (+3 more)
(+102 files in other folders)
